# Mahoraga-Website-Defender

./: .gitignore  LICENSE  README.md  docker-compose.yml  plant_flags.py  plant_shadow_flags.py  pyproject.toml  requirements.txt  start.sh  test_shadow_analyzer.py  test_watcher.py
config/: agent_counts.json  agent_models.json  budgets.yaml  llm.yaml  policies.yaml
control_plane/: Dockerfile  app.py  requirements.txt
dashboard/: Dockerfile  log_parser.py  requirements.txt  server.py
dashboard/frontend/: index.html  package-lock.json  package.json
detection/rules/: crapi.yaml
harness/: chain_detector.py  control_plane_client.py  cost_governor.py  log_collector.py  log_parsers.py  main.py  orchestrator.py  shadow_analyzer.py  shadow_data.py  shadow_user_sync.py  types.py
harness/agents/: analyzer.py  fixer.py  glm_runner.py  llm_runner.py  reviewer.py  tester.py  watcher.py
nginx/: nginx.conf
resource/: system_overview.drawio  writeup.md
test_logs/: run_all_exploits.sh  run_all_with_flags.sh  run_chain1_apikey.sh  run_chain2_idor.sh  run_chain3_jwt.sh  run_chain4_ssrf.sh  run_crapi_chain1_bola_vehicle.sh  run_crapi_chain2_bola_reports.sh  run_crapi_chain3_otp.sh  run_crapi_chain4_refund.sh  run_crapi_chain5_video.sh  run_crapi_chain6_coupon.sh  run_crapi_chain7_chatbot.sh  run_crapi_chain7_chatbot_live.sh  run_crapi_native.sh  run_e2e_option_d.sh  run_honeypot_test.sh  watcher_detections.json  watcher_honeypot.txt  watcher_honeypot_v2.txt
vuln_chains/: Dockerfile  app.py  requirements.txt
vuln_chains/chains/: api_key_leak.py  flag_verifier.py  (+4 more)
(+25 files in other folders)
