[project]
name = "reactive-defender"
version = "0.1.0"
description = "AI-powered reactive website defense agent"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.58",
    "watchfiles>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
reactive-defender = "harness.main:main"
